# debezium-server-iceberg

./: .dockerignore  .git-blame-ignore-revs  .gitignore  2021-10-01-debezium-server-iceberg.adoc  404.html  BLOGPOST.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  blog1.md  build.sh  deploy.sh  index.html  mkdocs.yml  pom.xml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  deploy-documentation.yml  release-ghcr-latest.yml  release-ghcr.yml  release-github-packages.yml  release.yml  (+4 more)
.run/: All in debezium-server-iceberg-sink.run.xml  IcebergChangeConsumerTest.run.xml  IcebergChangeConsumerTest.testSimpleUpload.run.xml  IcebergEventsChangeConsumerTest.run.xml  IcebergEventsIT.run.xml  IcebergIT.run.xml  Whole project.run.xml  clean,install.run.xml  dependency_tree.run.xml  package.run.xml  spotless_apply.run.xml  spotless_check.run.xml
caveats/: index.html
contributing/: index.html
debezium-server-dist/: README.md  pom.xml
debezium-server-iceberg-dist/: pom.xml
debezium-server-iceberg-sink/: pom.xml
docs/: CAVEATS.md  DOCS.md  caveats.md  contributing.md  docs.md  faq.md  iceberg.md  icebergevents.md  index.html  migration.md  python-runner.md
examples/: Dockerfile.Timescale  README.md  docker-compose.yml  loadData.sh  postgresql.conf.sample
faq/: index.html
iceberg/: index.html
icebergevents/: index.html
images/: debezium-iceberg.drawio
migration/: index.html
python/: pyproject.toml  setup.py
python-runner/: index.html
python/debezium/: __init__.py  __main__.py
search/: search_index.json
(+218 files in other folders)
